@@ -545,136 +545,3 @@ crypto_load_and_verify_certificate (const char *file,
 	return array;
 }
 
-#if TEST
-
-static void
-dump_key_to_pem (const char *key, gsize key_len, int key_type)
-{
-	char *b64 = NULL;
-	GString *str = NULL;
-	const char *start_tag;
-	const char *end_tag;
-	char *p;
-
-	switch (key_type) {
-	case NM_CRYPTO_KEY_TYPE_RSA:
-		start_tag = pem_rsa_key_begin;
-		end_tag = pem_rsa_key_end;
-		break;
-	case NM_CRYPTO_KEY_TYPE_DSA:
-		start_tag = pem_dsa_key_begin;
-		end_tag = pem_dsa_key_end;
-		break;
-	default:
-		g_warning ("Unknown key type %d", key_type);
-		return;
-	}
-
-	b64 = g_base64_encode ((const unsigned char *) key, key_len);
-	if (!b64) {
-		g_warning ("Couldn't base64 encode the key.");
-		goto out;
-	}
-
-	str = g_string_new (NULL);
-	if (!str) {
-		g_warning ("Couldn't allocate buffer to write out key.");
-		goto out;
-	}
-
-	g_string_append (str, start_tag);
-	g_string_append_c (str, '\n');
-
-	for (p = b64; p < (b64 + strlen (b64)); p += 64) {
-		g_string_append_len (str, p, strnlen (p, 64));
-		g_string_append_c (str, '\n');
-	}
-
-	g_string_append (str, end_tag);
-	g_string_append_c (str, '\n');
-
-out:
-	g_free (b64);
-	if (str)
-		g_string_free (str, TRUE);
-}
-
-#include <stdio.h>
-static void
-usage (const char *prgname)
-{
-	fprintf (stderr, "Usage: %s cert <file>\n"
-	                 "       %s key <file> <password>\n",
-	                 prgname, prgname);
-}
-
-#define MODE_CERT 1
-#define MODE_KEY  2
-
-int main (int argc, char **argv)
-{
-	int key_type;
-	int mode = 0;
-	const char *file;
-
-	if (argc < 2) {
-		usage (argv[0]);
-		return 1;
-	}
-
-	if (!strcmp (argv[1], "key")) {
-		if (argc < 4) {
-			usage (argv[0]);
-			return 1;
-		}
-		mode = MODE_KEY;
-	} else if (!strcmp (argv[1], "cert")) {
-		if (argc < 3) {
-			usage (argv[0]);
-			return 1;
-		}
-		mode = MODE_CERT;
-	} else {
-		usage (argv[0]);
-		return 1;
-	}
-
-	if (!crypto_init ()) {
-		g_warning ("Couldn't initialize crypto library.");
-		return 1;
-	}
-
-	file = argv[2];
-
-	if (mode == MODE_CERT) {
-		GByteArray *array;
-
-		array = crypto_load_and_verify_certificate (file);
-		if (!array) {
-			g_warning ("Couldn't read certificate file '%s'.", file);
-			goto out;
-		}
-		g_byte_array_free (array, TRUE);
-	} else if (mode == MODE_KEY) {
-		const char *password = argv[3];
-		GByteArray *array;
-
-		array = crypto_get_private_key (file, password, &key_type);
-		if (!array) {
-			g_warning ("Couldn't read key file '%s'.", file);
-			goto out;
-		}
-
-		dump_key_to_pem (array->data, array->len, key_type);
-		g_byte_array_free (array, TRUE);
-	} else {
-		g_assert_not_reached ();
-	}
-
-out:
-	crypto_deinit ();
-
-	return 0;
-}
-
-#endif
